<resources>
    <string name="app_name">Hello, OR!</string>
    <string name="bottom_title">All rights reserved.</string>
    <string name="cooking_board_imageview">cooking_board_imageView</string>
    <string name="task_board_text">Your Cooking Pizza Tasks</string>
    <string name="Timer_background_imageview">Timer_background_imageView</string>
    <string name="back2menu_button">back2menu_button</string>
    <string name="gamepage_menu_button">menu_button</string>
    <string name="gamepage_retry_button">retry_button</string>
    <string name="title_activity_gamepage">activity_gamepage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstpage_welcome">Welcome</string>
    <string name="firstpage_to">to</string>
    <string name="firstpage_operation">Operation</string>
    <string name="firstpage_research">Research</string>
    <string name="firstpage_world">world</string>
    <string name="play_button">PLAY</string>
    <string name="language_button">Language</string>
    <string-array name="spinner_strings">
        <item>Français</item>
        <item>English</item>
    </string-array>
    <string name="tutorial_p1_s1">Look! There are <b>4</b> pizza-cooking tasks for you !</string>
    <string name="tutorial_p1_s2">As we know, there are two work centers :</string>
    <string name="tutorial_p1_s3">What we need to do firstly is to classify these pizza into <font color='#F69531'><b>2</b></font>  groups like this.</string>
    <string name="tutorial_p2_s1"><font color='#60A917'><b>Next </b></font>, we need to sort each group <b>BUT</b> by different order.</string>
    <string name="tutorial_p2_s2">Look at <font color='#094270'><b> Group 1 </b></font>, we need to focus on their\t</string>
    <string name="tutorial_p2_w1">Preparing Time</string>
    <string name="tutorial_p2_s3">So we sort them in <font color='#60A917'><b> Ascending </b></font> order of their preparing time.</string>
    <string name="tutorial_p3_s1"><font color='#60A917'><b>And </b></font>, we need to sort <font color='#094270'><b> Group 1 </b></font> but in contrary way.</string>
    <string name="tutorial_p3_s2">Look at <b>Group 2</b>, we need to focus on their</string>
    <string name="tutorial_p3_w1">Baking Time</string>
    <string name="tutorial_p3_s3">So we sort them in <font color='#60A917'><b> Descending </b></font>  order of their baking time.</string>
    <string name="tutorial_p4_s1">Finally, just <b>combiner</b> the ordered group 1 and the ordered group 2. </string>
    <string name="tutorial_p4_s2">So, your final cooking time is :</string>
    <string name="tutorial_p4_s3">Do you get this algorithm ?</string>
    <string name="tutorial_p4_s4_a">Click</string>
    <string name="tutorial_p4_s4_b">to come back to your game,</string>
    <string name="tutorial_p4_s5_a">and you will see a key</string>
    <string name="tutorial_p4_s5_b">, click it to find out the best solution!</string>
    <string name="aboutus"><b>ABOUT\nUS</b></string>
    <string name="aboutus_no_space"><b>ABOUT\t\tUS</b></string>
    <string name="aboutus_credits">Credits</string>
    <string name="aboutus_produce">Produced By</string>
    <string name="produce_p1">Version 0.0.0</string>
    <string name="produce_p2">This application is copyrighted by <font color='#00ADEF'><b>École Polytechnique de l\’Université de Tours</b></font>, Laboratory LIFAT (<b><i>Laboratoire d\’Informatique Fondamentale et Appliquée de Tours</i></b>), Team ROOT (<b><i>Recherche Opérationnelle : Ordonnancement et Transport</i></b>), as well as the final interpretation right.</string>
    <string name="produce_p3">Directed By : ROBBES Alexis (<font color='#0F5BEB'><u>alexis.robbes@univ-tours.fr</u></font>), CHEVROTON Hugo (<font color='#0F5BEB'><u>hugo.chevroton@univ-tours.fr</u></font>)</string>
    <string name="produce_p4">Application Producer : JIANG Yaqi (<font color='#0F5BEB'><u>jiang.yaqi@foxmail.com</u></font>) </string>
    <string name="produce_p5">First Release Time : April, 2020</string>
    <string name="produce_p6">This application is proposed by Mr.ROBBES Alexis and Mr.CHEVROTON Hugo, as the Research \u0026 Development project for JIANG Yaqi, fifth year student during 2019-2020 in <b>École Polytechnique de l\’Université de Tours</b>.</string>
    <string name="produce_p7">This application is <font color='#F82828'><b>only</b></font> applied in education or scientific research for <b>École Polytechnique de l\’Université de Tours</b>, which is <font color='#F82828'><b>forbidden</b></font> for private use in any commercial purposes, and also <font color='#F82828'><b>forbidden</b></font> to copy our ideas.</string>
    <string name="produce_p8">Thank you for your interest in our application.<i>If you have any questions or suggestions, please contact us by email.</i></string>
    <string name="credit_p1">There are many icons used in our application from <font color='#0F5BEB'><b>www.flaticon.com</b></font></string>
    <string name="credit_p2"><font color='#8B4103'><b>Page Menu</b></font>: </string>
    <string name="credit_p3">UK Flag, France Flag : all these Icons made by <b>Freepik</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font></string>
    <string name="credit_p4"><font color='#8B4103'><b>Page FlowShop-Pizza Game</b></font>: </string>
    <string name="credit_p5">Oven, Tomate (in board), Cheese (in board), key, Open-Book, Menu : all these icons made by <b>Freepik</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font> \nPizza (in board) : Icon made by <b>xnimrodx</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font> \nAlarm: Icon made by <b>itim2101</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font>\nCheck: Icon made by <b>Kiranshastry</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font></string>
    <string name="credit_p6"><font color='#8B4103'><b>Page Johnson-Algorithm Tutorial </b></font>: </string>
    <string name="credit_p7">Right-arrow: Icon made by <b>smashicons</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font> \nConfused: Icon made by <b>Freepik</b> from <font color='#0F5BEB'><b><u>www.flaticon.com</u></b></font></string>
    <string name="credit_p00">There are some icons made by <font color='#0F5BEB'><b>ourselves</b></font></string>
    <string name="credit_p01">Logo of application : designed and made by <b>JIANG Yaqi</b>. \nNew-Game, Title-Board (Flowshop-pizza) : icons made by <b>JIANG Yaqi</b>.</string>
    <string name="intro_tabitem1">Operations\nResearch</string>
    <string name="intro_tabitem2">Polytech\nTours</string>
    <string name="intro_tabitem3">LIFAT</string>
    <string name="intro_or_p0"><font color='#049A8C'><b>Operations Research</b></font> (OR) is an analytical method of problem solving and decision making useful in the management of organizations. In operations research, problems are broken down into basic components and then solved by steps defined by mathematical analysis. For example, the <b>knapsack problem</b> models an analogous situation of filling a backpack. The bag cannot support more than a certain amount of weight. This bag is filled with all or part of a given set of items each having a weight and a value. The sum of the objects put in the backpack must be as large as possible, without exceeding the maximum authorized weight. An application could invite people to introduce operations research, and help them better understand the definition and resolution methods used in this discipline.</string>
    <string name="intro_or_title1"><font color='#8B4103'><b>Scheduling theory : </b></font></string>
    <string name="intro_or_content1">Scheduling theory is a branch of operations research that is concerned with calculating optimal completion dates for tasks. For this, it is very often necessary to simultaneously allocate the necessary resources to perform these tasks. A scheduling problem can be thought of as a scheduling subproblem in which it is a matter of deciding on the operational execution of scheduled tasks.\n<b>Flow shop scheduling problems</b>, are a class of scheduling problems with a workshop in which the flow control shall enable an appropriate sequencing for each job and for processing on a set of machines or with other resources 1,2,...,m in compliance with given processing orders. \n(via <font color='#0F5BEB'><b><u>https://en.wikipedia.org/wiki/Flow_shop_scheduling</u></b></font>)</string>
    <string name="intro_polytech_p1"><font color='#049A8C'><b>The University of Tours</b></font>, is a decisively European university that has established a campaign of actions within the Europe 2020 strategy, aiming to develop “smart, sustainable and inclusive growth”. Through its higher education and research missions, the University of Tours plays a key role in research, development and in raising the scientific, cultural and professional capacities of as many individuals as possible. \n<font color='#8B4103'><b>Website : </b></font> <u>https://www.univ-tours.fr</u></string>
    <string name="intro_polytech_p2"><font color='#00ADEF'><b>Polytech Tours</b></font>, (<u><i>École Polytechnique de l\’Université de Tours</i></u>) is the graduate school of engineering of the University of Tours, it is also a member of the <b>Polytech network</b>. The <b>Polytech network</b> is a network of 14 schools of engineering of French universities that graduate each year more than 3,000 engineers. This makes the Polytech network the biggest engineering graduates schools network in France. \n<b>Polytech Tours</b> offers five engineering specialties: Electrical Energy Systems, Computer Science, Industrial Computing, Mechanics and Systems design, Urban and Territorial Planning and Environment. And they hosts 270 students in its preparatory course, 850 students in the engineering specialties and 90 students in the PhD course. \n(via <font color='#0F5BEB'><b><u>https://polytech.univ-tours.fr/english-version/presentation</u></b></font>) \n<font color='#8B4103'><b>Website : </b></font> <u>https://polytech.univ-tours.fr</u></string>
    <string name="lifat_p1"><font color='#008577'><b>LIFAT</b></font>, <b>Laboratoire d’Informatique Fondamentale et Appliquée de Tours</b>, There are 48 faculty members (Professors, Assistant professors), 25 PhD candidates, 7 PhD post-docs in the Laboratory of Fundamental and Applied Computer Science of Tours (french acronym: LIFAT), The lab is actually organized in three research groups: DataBases and Natural Language Processing (french acronym: BdTln), Operations Research, Scheduling, and Transportation (french acronym: ROOT), Pattern Recognition and Image Analysis (french acronym: RFAI).</string>
    <string name="lifat_p2"><font color='#0769A7'><b>ROOT : </b></font> <u>Team Recherche Opérationnelle : Ordonnancement et Transport</u> \n The operations research, scheduling, and transportation team (ROOT for its acronym in French) was founded in 1986 under the name “Ordonnancement et Conduite” (OC). Today, the team’s main research interests include the design, development, and application of operations research techniques to: production and project planning and scheduling, high performance computing and big data, and transportation science and logistics. The team sets a special focus on multi-agent, multi-objective, stochastic, and robust approaches. <b>ROOT</b> brings together 12 faculties, 8 Ph.D. students, 2 post-doctoral fellow, and a number of master’s students who conduct high-quality and internationally renowned research.  \n(via <font color='#0F5BEB'><b><u>https://lifat.univ-tours.fr/lifat-english-version/teams/root</u></b></font>) </string>
</resources>